[metadata]
name = lpips-j
version = attr: lpips_j.__version__
author = Pedro Cuenca
author_email = pedro@latenitesoft.com
description = lpips-j – Minimal JAX/Flax port of `lpips` supporting `vgg16`, with pre-trained weights stored in the 🤗 Hugging Face hub.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pcuenca/lpips-j
project_urls =
    Bug Tracker = https://github.com/pcuenca/lpips-j/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    huggingface_hub
    h5py
    jax
    flax
    flaxmodels @ git+https://github.com/matthias-wright/flaxmodels.git@b24edecd85177192314f0953a525b810c898c4fe

[options.packages.find]
where = src
